# vkusvillbot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy-macmini.yml
docs/: architecture-review.md  architecture.md  ci-review.md  code-review.md  commands.md  dependency-audit.md  deploy.md  quality-score.md  security-review.md  simplifier-report.md  test-gaps.md  testing.md  vkusvill-protein-tops.md
docs/design/: README.md  local-retrieval.md  sgr-loop.md
scripts/: build_vector_index.py  deploy_macmini.sh  manual_sgr.py  sync_vkusvill_catalog.py
src/vkusvillbot/: config.py  db.py  embeddings_client.py  formatting.py  llm_client.py  logging.py  main.py  manual_llm.py  mcp_client.py  models.py  product_retriever.py  prompts.py  sgr_agent.py  telegram_draft.py  vector_index.py
tests/: test_config.py  test_message_threads.py  test_sgr_parser.py  test_vector_search.py
