[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vkusvillbot"
version = "0.1.0"
description = "Personal VkusVill Telegram bot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "aiogram>=3.4.1",
  "fastmcp==2.12.4",
  "mcp==1.17.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.1",
  "httpx[socks]>=0.28.1",
  "telegramify-markdown>=0.1.0",
  "watchfiles>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["vkusvillbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
